[tool.poetry]
name = "volatility-oracle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
starlette = "^0.14.2"
uvicorn = "^0.14.0"
requests = "^2.25.1"
pydantic = "^1.8.2"
gql = "^2.0.0"
pandas = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
